Tarihce Timeline olarak duzenlendi ve Google giris hatasi giderildi (Demo Mode)

--- a/index.html
+++ b/index.html
@@ -213,11 +213,42 @@
                             merkezine 28 km uzaklıktadır. Ekonomisi tarım, hayvancılık ve <strong>krom
                                 madenciliğine</strong> dayanmaktadır.</p>
 
-                        <p>Bölge tarihi açıdan zengin bir geçmişe sahiptir. <strong>Hitit, Roma, Bizans</strong>
-                            egemenliklerinin ardından Selçuklular döneminde de yerleşim yeri olarak kullanılmış, 1360'lı
-                            yıllarda <strong>Ramazanoğulları Beyliği'ne</strong>, Yavuz Sultan Selim döneminde ise
-                            <strong>Osmanlı Devleti'ne</strong> katılmıştır.
-                        </p>
+
+                        <div class="timeline">
+                            <div class="timeline-line"></div>
+                            <div class="timeline-item">
+                                <div class="tl-dot"></div>
+                                <span class="tl-year">1800'ler</span>
+                                <div class="tl-content glass">
+                                    <h4>Kuruluş</h4>
+                                    <p>Oğuzların Üçok kolundan gelen göçebe aileler tarafından kuruldu.</p>
+                                </div>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="tl-dot"></div>
+                                <span class="tl-year">1920</span>
+                                <div class="tl-content glass">
+                                    <h4>Seferberlik</h4>
+                                    <p>Milli Mücadele döneminde bölge halkının kahramanca savunması.</p>
+                                </div>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="tl-dot"></div>
+                                <span class="tl-year">1980</span>
+                                <div class="tl-content glass">
+                                    <h4>Elektrik & Kalkınma</h4>
+                                    <p>Köye ilk elektriğin gelmesi ve modernleşme süreci.</p>
+                                </div>
+                            </div>
+                            <div class="timeline-item">
+                                <div class="tl-dot"></div>
+                                <span class="tl-year">2014</span>
+                                <div class="tl-content glass">
+                                    <h4>Mahalle Statüsü</h4>
+                                    <p>Büyükşehir yasası ile resmi mahalle statüsünün kazanılması.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="about-stats">
@@ -277,8 +308,8 @@
                     <h3><i class="fas fa-comment-dots"></i> Yöresel Sözlük</h3>
                     <div class="dict-list">
                         <div class="dict-item">
-                            <span class="word">Bibi</span>
-                            <span class="meaning">Hala</span>
+                            <span class="word">Daylı</span>
+                            <span class="meaning">Zıkkımın Kökü</span>
                         </div>
                         <div class="dict-item">
                             <span class="word">Cülük</span>
