Logo guncellendi: Morel mantari ikonlu yeni logo eklendi

--- a/index.html
+++ b/index.html
@@ -80,9 +80,7 @@
     <nav id="navbar" class="navbar">
         <div class="nav-container">
             <div class="nav-brand">
-                <div class="brand-icon">
-                    <i class="fas fa-mountain"></i>
-                </div>
+                <img src="assets/logo-new.png" alt="Büyüksofulu Logosu" class="brand-logo-img">
                 <div class="brand-text">
                     <span class="brand-name">Büyüksofulu</span>
                     <span class="brand-sub">Aladağ'ın İncisi</span>
