--- a/index.html
+++ b/index.html
@@ -567,20 +567,20 @@
 
             <div class="weather-container glass-dark">
                 <!-- Current Weather -->
+                <!-- Current Weather -->
                 <div class="current-weather">
                     <div class="city-info">
                         <h3>Büyüksofulu, Aladağ</h3>
-                        <span class="date-today" id="weather-date">Perşembe, 14:00</span>
-                        <span class="weather-desc">Bulutlu</span>
+                        <span class="date-today" id="weather-date">Yükleniyor...</span>
+                        <span class="weather-desc" id="weather-desc">Bekleniyor...</span>
                     </div>
                     <div class="temp-info">
-                        <i class="fas fa-cloud weather-main-icon"></i>
-                        <span class="temperature">9°C</span>
+                        <i class="fas fa-cloud" id="weather-icon"></i>
+                        <span class="temperature" id="current-temp">--°C</span>
                     </div>
                     <div class="weather-details">
-                        <div class="wd-item"><i class="fas fa-tint"></i> <span>Nem: %66</span></div>
-                        <div class="wd-item"><i class="fas fa-wind"></i> <span>Rüzgar: 3 km/s</span></div>
-                        <div class="wd-item"><i class="fas fa-umbrella"></i> <span>Yağış: %5</span></div>
+                        <div class="wd-item"><i class="fas fa-tint"></i> <span id="humidity">Nem: --%</span></div>
+                        <div class="wd-item"><i class="fas fa-wind"></i> <span id="wind">Rüzgar: -- km/s</span></div>
                     </div>
                 </div>
 
