UI Guncellemesi: Navbar'a responsive mini hava durumu widget'i eklendi

--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
                 </div>
             </div>
 
+            <!-- Mini Hava Durumu (Navbar) -->
+            <div class="nav-weather-widget" id="nav-widget" title="Büyüksofulu Anlık Hava Durumu">
+                <i class="fas fa-cloud-sun" id="nav-icon"></i>
+                <span id="nav-temp">--°</span>
+            </div>
+
             <div class="nav-menu" id="nav-menu">
                 <a href="#home" class="nav-link active">Ana Sayfa</a>
                 <a href="#about" class="nav-link">Hakkında</a>
